--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
           <h2 class="visually-hidden">Features</h2>
           <ul class="features-list">
             <li class="features-item">
+              <svg width="64" height="64">
+                <use href="./images/icons.svg/icon-antenna-1-2"></use>
+              </svg>
               <h3 class="features-list-title">Strategy</h3>
               <p class="features-text">
                 Our goal is to identify the business problem to walk away with
