--- a/index.html
+++ b/index.html
@@ -80,15 +80,18 @@
           </button>
         </div>
       </section>
-
       <!--Features-->
       <section class="features" id="studio">
         <div class="container">
           <h2 class="visually-hidden">Features</h2>
           <ul class="features-list">
             <li class="features-item">
-              <svg width="64" height="64">
-                <use href="./images/icons.svg/icon-antenna-1-2"></use>
+              <svg>
+                <use
+                  href="./images/icons.svg#icon-Icon-1"
+                  width="264"
+                  height="112"
+                ></use>
               </svg>
               <h3 class="features-list-title">Strategy</h3>
               <p class="features-text">
@@ -97,6 +100,13 @@
               </p>
             </li>
             <li class="features-item">
+              <svg>
+                <use
+                  href="./images/icons.svg#icon-Icon-2"
+                  width="264"
+                  height="112"
+                ></use>
+              </svg>
               <h3 class="features-list-title">Punctuality</h3>
               <p class="features-text">
                 Bring the key message to the brand's audience for the best price
@@ -104,6 +114,13 @@
               </p>
             </li>
             <li class="features-item">
+              <svg>
+                <use
+                  href="./images/icons.svg#icon-Icon-3"
+                  width="264"
+                  height="112"
+                ></use>
+              </svg>
               <h3 class="features-list-title">Diligence</h3>
               <p class="features-text">
                 Research and confirm brands that present the strongest digital
@@ -111,6 +128,13 @@
               </p>
             </li>
             <li class="features-item">
+              <svg>
+                <use
+                  href="./images/icons.svg#icon-Icon-4"
+                  width="264"
+                  height="112"
+                ></use>
+              </svg>
               <h3 class="features-list-title">Technologies</h3>
               <p class="features-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -135,8 +159,34 @@
               />
               <div class="title-item">
                 <h3 class="team-title">Mark Guerrero</h3>
-                <p class="team-item">Product Designer</p>
-              </div>
+                <p class="team-item">Product Designer</p> </div>
+              
+              <ul class="team-icon-list">
+                <li class="team-icon-item">
+                  <a class="team-icon-link" href=""> 
+                    <svg class="team-icon" width="40" height="40">
+                  <use
+                    href="./images/icons.svg#icon-Ellipse-29"></use></svg></a>
+                </li>
+                <li class="team-icon-item">
+                  <a class="team-icon-link" href=""> 
+                    <svg class="team-icon" width="40" height="40">
+                  <use
+                    href="./images/icons.svg#icon-Ellipse-30"></use></svg></a>
+                </li>
+                 <li class="team-icon-item">
+                  <a class="team-icon-link" href=""> 
+                    <svg class="team-icon" width="40" height="40">
+                  <use
+                    href="./images/icons.svg#icon-Ellipse-31"></use></svg></a>
+                </li>
+                <li class="team-icon-item">
+                  <a class="team-icon-link" href=""> 
+                    <svg class="team-icon" width="40" height="40">
+                  <use
+                    href="./images/icons.svg#icon-Ellipse-32"></use></svg></a>
+                </li>
+              </ul>
             </li>
             <li class="our-team-item">
               <img
@@ -147,8 +197,33 @@
               />
               <div class="title-item">
                 <h3 class="team-title">Tom Ford</h3>
-                <p class="team-item">Frontend Developer</p>
-              </div>
+                <p class="team-item">Frontend Developer</p> </div>
+              <ul class="team-icon-list">
+                <li class="team-icon-item">
+                  <a class="team-icon-link" href=""> 
+                    <svg class="team-icon" width="40" height="40">
+                  <use
+                    href="./images/icons.svg#icon-Ellipse-29"></use></svg></a>
+                </li>
+                <li class="team-icon-item">
+                  <a class="team-icon-link" href=""> 
+                    <svg class="team-icon" width="40" height="40">
+                  <use
+                    href="./images/icons.svg#icon-Ellipse-30"></use></svg></a>
+                </li>
+                 <li class="team-icon-item">
+                  <a class="team-icon-link" href=""> 
+                    <svg class="team-icon" width="40" height="40">
+                  <use
+                    href="./images/icons.svg#icon-Ellipse-31"></use></svg></a>
+                </li>
+                <li class="team-icon-item">
+                  <a class="team-icon-link" href=""> 
+                    <svg class="team-icon" width="40" height="40">
+                  <use
+                    href="./images/icons.svg#icon-Ellipse-32"></use></svg></a>
+                </li>
+              </ul>
             </li>
             <li class="our-team-item">
               <img
@@ -159,9 +234,35 @@
               />
               <div class="title-item">
                 <h3 class="team-title">Camila Garcia</h3>
-                <p class="team-item">Marketing</p>
-              </div>
+                <p class="team-item">Marketing</p> </div>
+              <ul class="team-icon-list">
+                <li class="team-icon-item">
+                  <a class="team-icon-link" href=""> 
+                    <svg class="team-icon" width="40" height="40">
+                  <use
+                    href="./images/icons.svg#icon-Ellipse-29"></use></svg></a>
+                </li>
+                <li class="team-icon-item">
+                  <a class="team-icon-link" href=""> 
+                    <svg class="team-icon" width="40" height="40">
+                  <use
+                    href="./images/icons.svg#icon-Ellipse-30"></use></svg></a>
+                </li>
+                 <li class="team-icon-item">
+                  <a class="team-icon-link" href=""> 
+                    <svg class="team-icon" width="40" height="40">
+                  <use
+                    href="./images/icons.svg#icon-Ellipse-31"></use></svg></a>
+                </li>
+                <li class="team-icon-item">
+                  <a class="team-icon-link" href=""> 
+                    <svg class="team-icon" width="40" height="40">
+                  <use
+                    href="./images/icons.svg#icon-Ellipse-32"></use></svg></a>
+                </li>
+              </ul>
             </li>
+              
             <li class="our-team-item">
               <img
                 src="./images/img4.jpg"
@@ -171,11 +272,33 @@
               />
               <div class="title-item">
                 <h3 class="team-title">Daniel Wilson</h3>
-                <p class="team-item">UI Designer</p>
-              </div>
-            </li>
-          </ul>
-        </div>
+                <p class="team-item">UI Designer</p> </div>
+                 <ul class="team-icon-list">
+                <li class="team-icon-item">
+                  <a class="team-icon-link" href=""> 
+                    <svg class="team-icon" width="40" height="40">
+                  <use
+                    href="./images/icons.svg#icon-Ellipse-29"></use></svg></a>
+                </li>
+                <li class="team-icon-item">
+                  <a class="team-icon-link" href=""> 
+                    <svg class="team-icon" width="40" height="40">
+                  <use href="./images/icons.svg#icon-Ellipse-30" ></use></svg></a>
+                </li>
+                 <li class="team-icon-item">
+                  <a class="team-icon-link" href=""> 
+                    <svg class="team-icon" width="40" height="40">
+                  <use
+                    href="./images/icons.svg#icon-Ellipse-31"></use></svg></a>
+                </li>
+                <li class="team-icon-item">
+                  <a class="team-icon-link" href=""> 
+                    <svg class="team-icon" width="40" height="40">
+                  <use
+                    href="./images/icons.svg#icon-Ellipse-32"></use></svg></a>
+                </li>
+              </ul>
+            </li>  
       </section>
 
       <!--Our Portfolio-->
@@ -271,6 +394,24 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
+        <p>Social media</p>
+        <ul class="icon-footer-list">
+          <li><a href="">
+            <svg width="40" height="40">
+              <use href="./images/icons.svg#icon-Ellipse-33"></use>
+            </svg>
+          </a></li>
+          <li><a href="">
+            <svg width="40" height="40">
+              <use href="./images/icons.svg#icon-Ellipse-34"></use>
+            </svg></a></li>
+          <li><a href=""><svg width="40" height="40">
+              <use href="./images/icons.svg#icon-Ellipse-35"></use>
+            </svg></a></li>
+          <li><a href=""><svg width="40" height="40">
+              <use href="./images/icons.svg#icon-Ellipse-36"></use>
+            </svg></a></li>
+        </ul>
       </div>
     </footer>
   </body>
