--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           >
           <ul class="nav-list">
             <li class="list-item">
-              <a class="nav-link link" href="./index.html">Studio</a>
+              <a class="nav-link current" href="./index.html">Studio</a>
             </li>
             <li class="list-item">
               <a class="nav-link" href="">Portfolio</a>
@@ -417,18 +417,18 @@
 
     <!--Footer-->
     <footer class="page-footer">
-      <div class="container">
-        <div class="footer-logo-text">
-        <a class="logo footer-logo" href="./index.html"
+      <div class="container container-footer">
+        <div class="logo-text">
+          <a class="logo footer-logo" href="./index.html"
           >Web<span class="logo-part">Studio</span></a
         >
         <p class="footer-text">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
-      </div>
-      <div class="icon-footer">
-        <p class="footer-social">Social media</p>
+        </div>
+        <div class="icon-footer">
+          <p class="footer-social">Social media</p>
         <ul class="icon-footer-list">
           <li class="icon-footer-item">
             <a class="icon-footer-link" href="">
@@ -455,7 +455,7 @@
           </a>
         </li>
         </ul>
-      </div>
+        </div>
       </div>
     </footer>
   </body>
