--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                     </a>
                   </li>
                   <li class="team-icon-item">
-                    <a class="team-icon-link" href="" href="">
+                    <a class="team-icon-link" href="">
                       <svg class="team-icon" width="16" height="16">
                         <use href="./images/iconos.svg#icon-linkedin1"></use>
                       </svg>
