avto home work 4

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <svg class="features-list-icon" width="64"
                   height="64">
                 <use
-                  href="./images/iconos.svg#icon-antenna"
+                  href="./images/icons.svg#icon-antenna"
                 ></use></svg>
               </div>
               <h3 class="features-list-title">Strategy</h3>
@@ -104,7 +104,7 @@
               <svg class="features-list-icon" width="64"
                   height="64">
                 <use
-                  href="./images/iconos.svg#icon-clock"
+                  href="./images/icons.svg#icon-clock"
                   
                 ></use>
             </svg>
@@ -120,7 +120,7 @@
               <svg class="features-list-icon" width="64"
                   height="64">
                 <use
-                  href="./images/iconos.svg#icon-diagram"
+                  href="./images/icons.svg#icon-diagram"
                 ></use>
             </svg>
           </div>
@@ -135,7 +135,7 @@
               <svg class="features-list-icon" width="64"
                   height="64">
                 <use
-                  href="./images/iconos.svg#icon-astronaut"
+                  href="./images/icons.svg#icon-astronaut"
                 ></use>
               </svg>
             </div>
@@ -164,28 +164,28 @@
                   <li class="team-icon-item">
                     <a class="team-icon-link" href="">
                       <svg class="team-icon" width="16" height="16">
-                        <use href="./images/iconos.svg#icon-instagram1"></use>
+                        <use href="./images/icons.svg#icon-instagram1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-icon-item">
                     <a class="team-icon-link" href="">
                       <svg class="team-icon" width="16" height="16">
-                        <use href="./images/iconos.svg#icon-twitter1"></use>
+                        <use href="./images/icons.svg#icon-twitter1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-icon-item">
                     <a class="team-icon-link" href="">
                       <svg class="team-icon" width="16" height="16">
-                        <use href="./images/iconos.svg#icon-facebook1"></use>
+                        <use href="./images/icons.svg#icon-facebook1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-icon-item">
                     <a class="team-icon-link" href="">
                       <svg class="team-icon" width="16" height="16">
-                        <use href="./images/iconos.svg#icon-linkedin1"></use>
+                        <use href="./images/icons.svg#icon-linkedin1"></use>
                       </svg>
                     </a>
                   </li>
@@ -203,28 +203,28 @@
                   <li class="team-icon-item">
                     <a class="team-icon-link" href="">
                       <svg class="team-icon" width="16" height="16">
-                        <use href="./images/iconos.svg#icon-instagram1"></use>
+                        <use href="./images/icons.svg#icon-instagram1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-icon-item">
                     <a class="team-icon-link" href="">
                       <svg class="team-icon" width="16" height="16">
-                        <use href="./images/iconos.svg#icon-twitter1"></use>
+                        <use href="./images/icons.svg#icon-twitter1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-icon-item">
                     <a class="team-icon-link" href="">
                       <svg class="team-icon" width="16" height="16">
-                        <use href="./images/iconos.svg#icon-facebook1"></use>
+                        <use href="./images/icons.svg#icon-facebook1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-icon-item">
                     <a class="team-icon-link" href="">
                       <svg class="team-icon" width="16" height="16">
-                        <use href="./images/iconos.svg#icon-linkedin1"></use>
+                        <use href="./images/icons.svg#icon-linkedin1"></use>
                       </svg>
                     </a>
                   </li>
@@ -242,28 +242,28 @@
                   <li class="team-icon-item">
                     <a class="team-icon-link" href="">
                       <svg class="team-icon" width="16" height="16">
-                        <use href="./images/iconos.svg#icon-instagram1"></use>
+                        <use href="./images/icons.svg#icon-instagram1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-icon-item">
                     <a class="team-icon-link" href="">
                       <svg class="team-icon" width="16" height="16">
-                        <use href="./images/iconos.svg#icon-twitter1"></use>
+                        <use href="./images/icons.svg#icon-twitter1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-icon-item">
                     <a class="team-icon-link" href="">
                       <svg class="team-icon" width="16" height="16">
-                        <use href="./images/iconos.svg#icon-facebook1"></use>
+                        <use href="./images/icons.svg#icon-facebook1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-icon-item">
                     <a class="team-icon-link" href="">
                       <svg class="team-icon" width="16" height="16">
-                        <use href="./images/iconos.svg#icon-linkedin1"></use>
+                        <use href="./images/icons.svg#icon-linkedin1"></use>
                       </svg>
                     </a>
                   </li>
@@ -281,28 +281,28 @@
                   <li class="team-icon-item">
                     <a class="team-icon-link" href="">
                       <svg class="team-icon" width="16" height="16">
-                        <use href="./images/iconos.svg#icon-instagram1"></use>
+                        <use href="./images/icons.svg#icon-instagram1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-icon-item">
                     <a class="team-icon-link" href="">
                       <svg class="team-icon" width="16" height="16">
-                        <use href="./images/iconos.svg#icon-twitter1"></use>
+                        <use href="./images/icons.svg#icon-twitter1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-icon-item">
                     <a class="team-icon-link" href="">
                       <svg class="team-icon" width="16" height="16">
-                        <use href="./images/iconos.svg#icon-facebook1"></use>
+                        <use href="./images/icons.svg#icon-facebook1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-icon-item">
                     <a class="team-icon-link" href="">
                       <svg class="team-icon" width="16" height="16">
-                        <use href="./images/iconos.svg#icon-linkedin1"></use>
+                        <use href="./images/icons.svg#icon-linkedin1"></use>
                       </svg>
                     </a>
                   </li>
@@ -437,24 +437,24 @@
           <li class="icon-footer-item">
             <a class="icon-footer-link" href="">
             <svg class="svg-footer" width="24" height="24">
-              <use href="./images/iconos.svg#icon-instagram1"></use>
+              <use href="./images/icons.svg#icon-instagram1"></use>
             </svg>
           </a></li>
           <li class="icon-footer-item">
             <a class="icon-footer-link" href="">
             <svg class="svg-footer" width="24" height="24">
-              <use href="./images/iconos.svg#icon-twitter1"></use>
+              <use href="./images/icons.svg#icon-twitter1"></use>
             </svg></a></li>
           <li class="icon-footer-item">
             <a class="icon-footer-link" href="">
             <svg class="svg-footer" width="24" height="24">
-              <use href="./images/iconos.svg#icon-facebook1"></use>
+              <use href="./images/icons.svg#icon-facebook1"></use>
             </svg></a>
           </li>
           <li class="icon-footer-item">
             <a class="icon-footer-link" href="">
             <svg class="svg-footer" width="24" height="24">
-              <use href="./images/iconos.svg#icon-linkedin1"></use>
+              <use href="./images/icons.svg#icon-linkedin1"></use>
             </svg>
           </a>
         </li>
